compiler/src/test/resources/amyc/typer/failing/MatchError6.amy
object MatchError
  abstract class Foo
  case class Bar(i: Int) : Foo

  abstract class Foo2
  case class Bar2(i: Int) : Foo2

  Bar(1) match {
    case Bar2(1) => ()
  }
end MatchError
